[gd_scene load_steps=58 format=2]

[ext_resource path="res://CharacterSprites/Wizard/WizardIdle.png" type="Texture" id=1]
[ext_resource path="res://CharacterSprites/Wizard/WizardRun.png" type="Texture" id=2]
[ext_resource path="res://OLD/wizard.gd" type="Script" id=3]
[ext_resource path="res://CharacterSprites/Wizard/WizardAttack1.png" type="Texture" id=4]
[ext_resource path="res://CharacterSprites/Wizard/WizardJump.png" type="Texture" id=5]
[ext_resource path="res://CharacterSprites/Wizard/WizardAttack2.png" type="Texture" id=6]
[ext_resource path="res://CharacterSprites/Wizard/WizardFall.png" type="Texture" id=7]
[ext_resource path="res://CharacterSprites/Wizard/WizardHit.png" type="Texture" id=8]
[ext_resource path="res://CharacterSprites/Wizard/WizardDeath.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 115, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 230, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 345, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 460, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 575, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 115, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 115, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 230, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 345, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 460, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 575, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 690, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 805, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 115, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 230, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 345, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 460, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 575, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 690, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 805, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 6 )
region = Rect2( 115, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 6 )
region = Rect2( 230, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 6 )
region = Rect2( 345, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 6 )
region = Rect2( 460, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 6 )
region = Rect2( 575, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 6 )
region = Rect2( 690, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 6 )
region = Rect2( 805, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 9 )
region = Rect2( 115, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 9 )
region = Rect2( 230, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 9 )
region = Rect2( 345, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 9 )
region = Rect2( 460, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 9 )
region = Rect2( 575, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 9 )
region = Rect2( 690, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 7 )
region = Rect2( 115, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 8 )
region = Rect2( 115, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 8 )
region = Rect2( 230, 0, 115, 95 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 8 )
region = Rect2( 345, 0, 115, 95 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 19 ), SubResource( 18 ), SubResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": false,
"name": "attack1",
"speed": 13.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": false,
"name": "attack2",
"speed": 13.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 19.2972 )

[sub_resource type="RectangleShape2D" id=60]
extents = Vector2( 19.25, 21.5 )

[node name="wizard" type="KinematicBody2D"]
script = ExtResource( 3 )
JUMP_FORCE = -351
MAX_SPEED = 149

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 14 )
animation = "idle"
frame = 4
playing = true

[node name="wizard_hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -4, 3 )
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="."]

[node name="hitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 23.5, -10 )
shape = SubResource( 60 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
